--- a/CarRental/src/app/components/payment/payment.component.html
+++ b/CarRental/src/app/components/payment/payment.component.html
@@ -5,18 +5,22 @@
             <h1 class="h3 mb-3 fw-normal">Ödeme Bilgilerinizi Giriniz</h1>
             <div class="row">
 
-
                 <div class="form-floating">
-                    <input type="number" class="form-control" id="floatingInput" placeholder="0000 0000 0000 0000">
+                    <input type="number" max="16" formControlName="cardNumber" class="form-control" id="floatingInput" placeholder="0000 0000 0000 0000" required>
                     <label for="floatingInput">Kart No</label>
                 </div>
                 <div class="form-floating mt-1" >
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
                     <label for="floatingPassword">Password</label>
                 </div>
                 <div class="form-floating col-6 mt-1" >
-                    <input type="month" class="form-control" id="floatingPassword" placeholder="Password">
+                    <input type="month" formControlName="expiryDate" class="form-control" id="month" placeholder="MM YY" required>
                     <label for="floatingPassword">MM YY</label>
+                </div>
+
+                <div class="form-floating col-4 mt-1" style="margin-left: 5px;" >
+                    <input type="number" formControlName="cvv" class="form-control" id="month" placeholder="CVV" required>
+                    <label for="floatingPassword">CVV</label>
                 </div>
 
                 <div class="checkbox mb-3 mt-1">
@@ -24,8 +28,8 @@
                         <input type="checkbox" value="remember-me"> Kredi kartını kaydet
                     </label>
                 </div>
-                <button class="w-100 btn btn-lg btn-primary" type="submit">Ödemeyi Tamamla</button>
-                <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+                <button class="w-100 btn btn-lg btn-primary" (click)="pay()">Ödemeyi Tamamla</button>
+
             </div>
         </form>
     </main>
