--- a/CarRental/src/app/components/payment/payment.component.html
+++ b/CarRental/src/app/components/payment/payment.component.html
@@ -14,12 +14,12 @@
                     <label for="floatingPassword">Password</label>
                 </div>
                 <div class="form-floating col-6 mt-1" >
-                    <input type="month" formControlName="expiryDate" class="form-control" id="month" placeholder="MM YY" required>
+                    <input type="datetime-local" formControlName="expiryDate" class="form-control" id="month" placeholder="MM YY" required>
                     <label for="floatingPassword">MM YY</label>
                 </div>
 
                 <div class="form-floating col-4 mt-1" style="margin-left: 5px;" >
-                    <input type="number" formControlName="cvv" class="form-control" id="month" placeholder="CVV" required>
+                    <input type="number" formControlName="cvv" class="form-control" id="cvv" placeholder="CVV" required>
                     <label for="floatingPassword">CVV</label>
                 </div>
 
