--- a/CarRental/src/app/components/navi/navi.component.html
+++ b/CarRental/src/app/components/navi/navi.component.html
@@ -23,7 +23,7 @@
               <li><a class="dropdown-item" routerLink="">Action</a></li>
               <li><a class="dropdown-item" routerLink="">Another action</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" routerLink="">Something else here</a></li>
+              <li><a class="dropdown-item" (click)="deleteToken()" routerLink="/home">Çıkış</a></li>
             </ul>
           </li>
           <li class="nav-item">
