--- a/CarRental/src/app/components/account/account.component.html
+++ b/CarRental/src/app/components/account/account.component.html
@@ -1,9 +1,7 @@
 <div class="container">
     <main>
       <div class="py-5 text-center">
-        <img class="d-block mx-auto mb-4" src="" alt="" width="72" height="57">
-        <h2>Checkout form</h2>
-        <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
+        
       </div>
   
       <div class="row g-5">
@@ -47,20 +45,15 @@
             </li>
           </ul>
   
-          <form class="card p-2">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Promo code">
-              <button type="submit" class="btn btn-secondary">Redeem</button>
-            </div>
-          </form>
         </div>
         <div class="col-md-7 col-lg-8">
-          <h4 class="mb-3">Billing address</h4>
-          <form class="needs-validation" novalidate>
+          <h4 class="mb-3">Hesap Bilgileriniz</h4>
+          <form class="needs-validation" *ngIf="dataLoaded" [formGroup]="userAddForm">
             <div class="row g-3">
+
               <div class="col-sm-6">
                 <label for="firstName" class="form-label">First name</label>
-                <input type="text" class="form-control" id="firstName" placeholder="" value="{{user.firstName | titlecase}}" required>
+                <input type="text" class="form-control" id="firstName" formControlName="firstName" placeholder="" value="{{user.firstName | titlecase}}" required>
                 <div class="invalid-feedback">
                   Valid first name is required.
                 </div>
@@ -68,90 +61,31 @@
   
               <div class="col-sm-6">
                 <label for="lastName" class="form-label">Last name</label>
-                <input type="text" class="form-control" id="lastName" placeholder="" value="{{user.lastName | titlecase}}" required>
+                <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="" value="{{user.lastName | titlecase}}" required>
                 <div class="invalid-feedback">
                   Valid last name is required.
                 </div>
               </div>
   
               <div class="col-12">
-                <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
-                <input type="email" class="form-control" value="{{user.email}}" id="email" placeholder="you@example.com">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" formControlName="email" value="{{user.email}}" id="email" placeholder="you@example.com">
                 <div class="invalid-feedback">
                   Please enter a valid email address for shipping updates.
                 </div>
-              </div>    
+              </div>
+              <label for="password" class="form-label">Yeni Parola</label>
+              <div class="col-12 input-group mt-1">
+                <input type="text" class="form-control input-group-text" value="" formControlName="password" id="password" placeholder="Parola" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="changeClass()">Değiştir</button>
+              </div> 
             </div>
   
-            <hr class="my-4">
+            <hr class="my-4">          
   
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="same-address">
-              <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
-            </div>
+
   
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="save-info">
-              <label class="form-check-label" for="save-info">Save this information for next time</label>
-            </div>
-  
-            <hr class="my-4">
-  
-            <h4 class="mb-3">Payment</h4>
-  
-            <div class="my-3">
-              <div class="form-check">
-                <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
-                <label class="form-check-label" for="credit">Credit card</label>
-              </div>
-              <div class="form-check">
-                <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
-                <label class="form-check-label" for="debit">Debit card</label>
-              </div>
-              <div class="form-check">
-                <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required>
-                <label class="form-check-label" for="paypal">PayPal</label>
-              </div>
-            </div>
-  
-            <div class="row gy-3">
-              <div class="col-md-6">
-                <label for="cc-name" class="form-label">Name on card</label>
-                <input type="text" class="form-control" id="cc-name" placeholder="" required>
-                <small class="text-muted">Full name as displayed on card</small>
-                <div class="invalid-feedback">
-                  Name on card is required
-                </div>
-              </div>
-  
-              <div class="col-md-6">
-                <label for="cc-number" class="form-label">Credit card number</label>
-                <input type="text" class="form-control" id="cc-number" placeholder="" required>
-                <div class="invalid-feedback">
-                  Credit card number is required
-                </div>
-              </div>
-  
-              <div class="col-md-3">
-                <label for="cc-expiration" class="form-label">Expiration</label>
-                <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
-                <div class="invalid-feedback">
-                  Expiration date required
-                </div>
-              </div>
-  
-              <div class="col-md-3">
-                <label for="cc-cvv" class="form-label">CVV</label>
-                <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
-                <div class="invalid-feedback">
-                  Security code required
-                </div>
-              </div>
-            </div>
-  
-            <hr class="my-4">
-  
-            <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
+            <button class="w-100 btn btn-primary btn-lg" (click)="save()">Değişiklikleri kaydet</button>
           </form>
         </div>
       </div>
