Adding User Profile

--- a/CarRental/src/app/components/navi/navi.component.html
+++ b/CarRental/src/app/components/navi/navi.component.html
@@ -20,8 +20,7 @@
               {{user.firstName}} {{user.lastName}}
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" routerLink="">Action</a></li>
-              <li><a class="dropdown-item" routerLink="">Another action</a></li>
+              <li><a class="dropdown-item" routerLink="/account">Profil</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" (click)="deleteToken()" routerLink="/home">Çıkış</a></li>
             </ul>
