--- a/CarRental/src/app/components/payment/payment.component.html
+++ b/CarRental/src/app/components/payment/payment.component.html
@@ -10,7 +10,7 @@
                     <label for="floatingInput">Kart No</label>
                 </div>
                 <div class="form-floating mt-1" >
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
+                    <input type="password" class="form-control" id="floatingPassword" formControlName="password" placeholder="Password" required>
                     <label for="floatingPassword">Password</label>
                 </div>
                 <div class="form-floating col-6 mt-1" >
